# ccm

./: CLAUDE.md  Cargo.toml
doc/knowledge/: claude.md  ghostty.md  wezterm.md
src/: cli.rs  config.rs  error.rs  gj.rs  main.rs  plan_viewer.rs  pty_wrap.rs  session.rs  state.rs  wezterm.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
