[package]
name = "ccm"
version = "0.1.0"
edition = "2021"
description = "Claude Code Manager - manage multiple Claude Code sessions via WezTerm tabs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
